# ronnyx

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  ronnyx.yaml.example
.github/workflows/: ci.yml
app/: cli.py  config.py  main.py
app/api/: deps.py  routers.py
app/core/: agent.py  github_tools.py  notion_tools.py  prompts.py
ronnyx/: cli.py  config.py  main.py  serve.py
ronnyx/api/: deps.py  routers.py
ronnyx/core/: agent.py  prompts.py
ronnyx/core/tools/: registry.py
tests/: test_api.py  test_config.py  test_deps.py  test_tools.py
